--- a/07_bootstrap_餐厅管理.html
+++ b/07_bootstrap_餐厅管理.html
@@ -29,18 +29,10 @@
             <td>186********</td>
             <td>湖北武汉</td>
             <td>好吃的菜品都在这里</td>
-            <td>
-                <button type="button" class="btn btn-block btn-info">上架</button>
-            </td>
-            <td>
-                <button type="button" class="btn btn-block btn-default">下架</button>
-            </td>
-            <td>
-                <button type="button" class="btn btn-block btn-info">变更</button>
-            </td>
-            <td>
-                <button type="button" class="btn btn-block btn-danger">删除</button>
-            </td>
+            <td><button type="button" class="btn btn-block btn-info">上架</button></td>
+            <td><button type="button" class="btn btn-block btn-default">下架</button></td>
+            <td><button type="button" class="btn btn-block btn-info">变更</button></td>
+            <td><button type="button" class="btn btn-block btn-danger">删除</button></td>
         </tr>
     </table>
     <button type="button" class="btn btn-block btn-success">添加餐厅</button>
